Fix bug UI on firefox and safari

--- a/src/components/weather-block/style.css
+++ b/src/components/weather-block/style.css
@@ -69,6 +69,7 @@
 
 .weather-info__wrapper--left {
   text-align: left;
+  width: 50%;
 }
 
 .weather-info__icon {
@@ -97,6 +98,7 @@
 
 .weather-info__wrapper--right {
   display: flex;
+  width: 50%;
 }
 
 .weather-info__info-wrapper {
